updated htaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,4 @@ RewriteRule ^c-([0-9]+)	index.php?m=cate&a=index&cid=$1	[L]
 RewriteRule ^item-([0-9]+).html	?m=item&a=index&id=$1	[L]
 RewriteRule ^uc/([^/]+)$	?m=uc&a=$1	[L]
 RewriteRule ^(item|cate|article|advert)/(tao|tag|index)/(id|tag)/([^/]+)$	?m=$1&a=$2&$3=$4	[L]
+RewriteRule ^index/index/sp/([^/]+)/p/([^/]+)$	?m=index&a=index&sp=$1&p=$2	[L]
